# sickle_ui

./: Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: rust.yml
crates/sickle_macros/: Cargo.toml
crates/sickle_math/: Cargo.toml
crates/sickle_ui_scaffold/: Cargo.toml
crates/sickle_ui_scaffold/src/: ui_builder.rs  ui_utils.rs
crates/sickle_ui_scaffold/src/theme/: icons.rs  theme_colors.rs
examples/: docking_zone_splits.rs  material3_preview.rs  simple_editor.rs  widget.rs
src/widgets/inputs/: checkbox.rs  dropdown.rs  radio_group.rs  slider.rs
src/widgets/menus/: menu.rs  menu_item.rs
